Reverting back to Bootstrap; setting up some basic variables and styles.

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -6,4 +6,19 @@ $main-sm-columns:       12;
 $sidebar-sm-columns:    4;
 
 // Colors
-$brand-primary:         #27ae60;
+$brand-primary:         #FDC625;
+$body-bg:               #212121;
+$text-color:            #F5F5F5;
+$link-hover-color:      #F9A825;
+
+$brand-success:         #8BC34A;
+$brand-info:            #03A9F4;
+$brand-warning:         #FF9800;
+$brand-danger:          #F44336;
+
+// Typography
+$font-family-sans-serif: "Roboto Slab", "Helvetica Neue", Helvetica, sans-serif;
+$headings-font-weight:  400;
+
+// Components
+$border-radius-base:    0;
