Adding beer listing functionality & styling

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -16,6 +16,15 @@ $brand-info:            #03A9F4;
 $brand-warning:         #FF9800;
 $brand-danger:          #F44336;
 
+$beer-list--white:      #F5F5F5;
+
+$beer-list--red:        #FFCDD2;
+$beer-list--orange:     #FFCCBC;
+$beer-list--yellow:     #FFF9C4;
+$beer-list--green:      #C8E6C9;
+$beer-list--blue:       #BBDEFB;
+$beer-list--purple:     #D1C4E9;
+
 // Typography
 $font-family-sans-serif: "Roboto Slab", "Helvetica Neue", Helvetica, sans-serif;
 $headings-font-weight:  400;
