--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,1 +1,14 @@
+.main {
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+}
 
+body {
+  position: relative;
+}
+
+a {
+  transition: color 0.2s ease-in;
+}
