--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -1,6 +1,10 @@
 // Grid system
 .main {
   @include make-sm-column($main-sm-columns);
+  @include make-sm-column-offset($menu-sidebar-sm-columns);
+  @include make-md-column($main-md-columns);
+  @include make-md-column-offset($menu-sidebar-md-columns);
+
   .sidebar-primary & {
     @include make-sm-column($main-sm-columns - $sidebar-sm-columns);
   }
