--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -30,3 +30,40 @@
     margin-bottom: 1em;
   }
 }
+
+.display-posts-listing {
+  .listing-item {
+    @include clearfix;
+
+    padding-bottom: 1em;
+    border-bottom: 1px solid rgba(#FFF, 0.3);
+    margin-bottom: 2em;
+
+    &:last-child {
+      border-bottom: none;
+      margin-bottom: 0;
+      padding-bottom: 0;
+    }
+
+    .image {
+      float: right;
+      margin: 0 -30px 15px 30px;
+    }
+
+    .title {
+      font-size: 1.8em;
+      font-weight: 300;
+      display: block;
+      margin-bottom: 0.5em;
+    }
+
+    .date {
+      font-weight: 300;
+      font-style: italic;
+    }
+
+    .excerpt-dash {
+
+    }
+  }
+}
